2004-06-30  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (main): Add \n to printf for displaying errors. Fix
	the bug reported by SASADA Koichi<ko1@atdot.net>. [pdumpfs-new:12]
	(parse_options): Add a check for the availability of File.fnmatch.

2004-06-22  Satoru Takabayashi  <satoru@namazu.org>

	* doc/pdumpfs-ja.html: Moved from ..
	* doc/pdumpfs.html: Ditto.
	* doc/images/pdumpfs.png: New file.
	* doc/images/pdumpfs-mini.png: New file.
	* doc/images/pdumpfs-ja.png: New file.
	* doc/images/pdumpfs-ja-mini.png: New file.

 	* pdumpfs: Version 1.0 released.

	* Makefile (dist): Don't include  pdumpfs.exe.manifest.

	* Makefile (VERSION): Bumped version number to 1.0.

2004-05-22  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (Pdumpfs::Pdumpfs::convert_bytes): New method.

2004-05-21  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (Pdumpfs::PdumpfsForm::task_scheduler_menu_clicked):
	New method.
	(Pdumpfs::TimerDialog): Removed.
	(Pdumpfs::TaskSchedulerDialog::construct): New class.
	(Pdumpfs::PdumpfsForm::set_timer_menu_clicked): Removed.
	(Pdumpfs::PdumpfsForm::unset_timer_menu_clicked): Ditto.
	(Pdumpfs::PdumpfsForm::calc_interval): Ditto.
	(Pdumpfs::PdumpfsForm::update_statusbar): Ditto.
	(Pdumpfs::PdumpfsForm::start_timer_thread): Ditto.
	(Pdumpfs::PdumpfsForm::terminate_timer_thread): Ditto.
	(Pdumpfs::PdumpfsForm::restart_timer_thread): Ditto.
	(Pdumpfs::PdumpfsForm::save_config): Remove backup_time.
	(Pdumpfs::PdumpfsForm::load_config): Ditto.
	(Pdumpfs::TaskSchedulerDialog::construct): Simplified.
	(Pdumpfs::PdumpfsForm::start_statusbar_thread): Removed.
	(ntfs?): New method.
	(Pdumpfs::Pdumpfs): New class.
	(File::PdumpfsForm::save_menu_clicked): Removed.
	(File::PdumpfsForm::save_script): Ditto.
	(File::PdumpfsForm::escape): Ditto.

2004-05-20  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (PdumpfsForm::do_backup): Use default values for
	parameters.
	(Pdumpfs::PdumpfsForm::save_script): New method.