@@ -1,3 +1,8 @@
+2004-07-09  Satoru Takabayashi  <satoru@namazu.org>
+
+	* pdumpfs.in (File::PdumpfsForm::get_program_directory): New method.
+	(File::PdumpfsForm::get_program_file_name): Renamed from program_name.
+
 2004-06-30  Satoru Takabayashi  <satoru@namazu.org>
 
 	* pdumpfs.in (main): Add \n to printf for displaying errors. Fix
